iPhone 5/6 like buttons flex wrap fix

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,6 @@ fieldset{
 input{
 	background-color:rgb(0,110,154);
 	color: white;
-	letter-spacing: 0.075em;
 	border-style: none;
 	font-size:0.832em;
 	padding:0.3em 0.7em;
@@ -102,6 +101,14 @@ article a{
 article>footer{
 	display: flex;
 	justify-content: flex-end;
+}
+
+@media (max-width:30rem){
+	article>footer{
+	display: flex;
+	justify-content: center;
+		flex-wrap: wrap;
+}
 }
 
 @media (min-width:35rem){
